# https_client-master-uart

./: CMakeLists.txt  CMakePresets.json  Kconfig  README.md  prj.conf
boards/: icarus.overlay
src/: battery.c  battery.h  data_acq.c  data_acq.h  https_handler.c  https_handler.h  main.c  rg15.c  rg15.h  sensor_data_acq.c  sensor_data_acq.h  uart_handler.c  uart_handler.h
